--- a/R/outputs.Rmd
+++ b/R/outputs.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 # Plotting Function
 ```{r}
-plot.thesis.data <- function(data)
+plot.thesis.data <- function(data, numAgents, numTimeTicks)
   {
   x <- read.csv(data, header=FALSE, stringsAsFactors=FALSE)
 
@@ -14,18 +14,18 @@ plot.thesis.data <- function(data)
                        "p1", "p2", "p3", "p4", "p5",
                        "n1", "n2", "n3", "n4", "n5")
 
-  print(head(x, 10))
-  print(tail(x, 10))
+  print(head(x, numAgents))
+  print(tail(x, numAgents))
 
   for (i in 3:12) {
     x[ ,i] <- as.numeric(x[ ,i])
   }
 
-  x.1 <- x[seq(1,100,10),]
-  x.2 <- x[seq(2,100,10),]
-  x.3 <- x[seq(3,100,10),]
-  x.4 <- x[seq(4,100,10),]
-  x.5 <- x[seq(5,100,10),]
+  x.1 <- x[seq(1, numTimeTicks * numAgents ,numAgents),]
+  x.2 <- x[seq(2, numTimeTicks * numAgents ,numAgents),]
+  x.3 <- x[seq(3, numTimeTicks * numAgents ,numAgents),]
+  x.4 <- x[seq(4, numTimeTicks * numAgents ,numAgents),]
+  x.5 <- x[seq(5, numTimeTicks * numAgents ,numAgents),]
 
   x.1.ave.pos <- apply(x.1[,c(3,4,5,6,7)],1, mean)
   x.1.ave.neg <- apply(x.1[,c(8,9,10,11,12)],1,mean)
@@ -72,7 +72,7 @@ plot.thesis.data <- function(data)
 - Network: circle
 
 ```{r}
-plot.thesis.data("~/Desktop/thesis-data/agent1pos1.csv")
+plot.thesis.data("/home/dchen/git/repast-neural-network-agent-based-model/R/data/agent1pos1.csv", 10, 10)
 ```
 
 # Sanity Case:
@@ -89,7 +89,7 @@ plot.thesis.data("~/Desktop/thesis-data/agent1pos1.csv")
 
 
 ```{r}
-plot.thesis.data("~/Desktop/thesis-data/agent1posrandom.csv")
+plot.thesis.data("/home/dchen/git/repast-neural-network-agent-based-model/R/data/agent1posrandom.csv", 10, 10)
 ```
 
 # Sanity Case:
@@ -105,7 +105,7 @@ plot.thesis.data("~/Desktop/thesis-data/agent1posrandom.csv")
 - Network: circle
 
 ```{r}
-plot.thesis.data("~/Desktop/thesis-data/agent1bothrandom.csv")
+plot.thesis.data("/home/dchen/git/repast-neural-network-agent-based-model/R/data/agent1bothrandom.csv", 10, 10)
 ```
 
 # Sanity Case:
@@ -121,7 +121,7 @@ plot.thesis.data("~/Desktop/thesis-data/agent1bothrandom.csv")
 - Network: circle
 
 ```{r, echo=FALSE}
-plot.thesis.data("~/Desktop/thesis-data/agent1bothrandom-weights.csv")
+plot.thesis.data("/home/dchen/git/repast-neural-network-agent-based-model/R/data/agent1bothrandom-weights.csv", 10, 10)
 ```
 
 # Sanity Case:
@@ -137,6 +137,26 @@ plot.thesis.data("~/Desktop/thesis-data/agent1bothrandom-weights.csv")
 - Network: circle
 
 ```{r, echo=FALSE}
-plot.thesis.data("~/Desktop/thesis-data/randomvaluesetweight.csv")
+plot.thesis.data("/home/dchen/git/repast-neural-network-agent-based-model/R/data/randomvaluesetweight.csv", 10, 10)
 ```
 
+# Output Data
+- Agents Activated: 1
+- Valence Bank: both
+    - Valence bank activation: random
+- Valence bank Weights: random
+    - opposite -0.2
+    - corresponding 0.5
+    - carry over = 0.2
+    - bias = 0
+    - decay = -0.5
+- Network: circle
+- random number: read in from file
+
+- Processing units per valence bank: 5
+- number of agents: 10
+- number of time ticks: 10,000
+
+```{r, echo=FALSE}
+plot.thesis.data("/home/dchen/git/repast-neural-network-agent-based-model/R/data/agent1-both-random-weights-10k.csv", 10, 10000)
+```
